# pynotify-auto

./: .gitignore  404.html  LICENSE  MAINTAINER.md  README.md  index.html  install.bat  install.sh  mkdocs.yml  pynotify-auto.pth  pyproject.toml  run_tests.ps1  setup.py  sitemap.xml  test_deep_interception.py  test_multiprocessing.py  test_ping.py  verify_deep_interception.py
.github/workflows/: docs.yml  publish.yml  test.yml
COMPARISON/: index.html
contributing/: index.html
docs/: COMPARISON.md  contributing.md  index.html  index.md  installation.md  medium-article.md  tutorial-vignette.md
installation/: index.html
medium-article/: index.html
pynotify_auto/: __init__.py  __main__.py  cli.py  config.py  remote.py
pynotify_auto.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scratch/: child.py  install_hook_safe.py  manual_test.py  parent.py  test_mp.py  test_remote.py
search/: search_index.json
tests/: test_comprehensive.py  test_config.py
tutorial-vignette/: index.html
