[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynotify-auto"
version = "0.2.7"
authors = [
  { name="Bhuwan Shah" },
]
description = "Zero-Code automatic notifications for long-running Python scripts."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["notification", "automation", "development", "utility", "alerts"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/shahbhuwan/pynotify-auto"
"Bug Tracker" = "https://github.com/shahbhuwan/pynotify-auto/issues"
"Source Code" = "https://github.com/shahbhuwan/pynotify-auto"

[project.scripts]
pynotify-auto = "pynotify_auto.cli:main"

[tool.setuptools]
packages = ["pynotify_auto"]
include-package-data = true

[tool.setuptools.data-files]
# This is where we try to place the .pth file. 
# Note: For many modern tools, .pth files are handled best via setup.py 
# if dynamic paths are needed.
"." = ["pynotify-auto.pth"]
